test/functions/ferguson/inout-error1.chpl
proc f(inout x: int) { }

var one = 1;
f(one, one);
